# Doa-oDesktop

./: .env.example  .gitignore  README.md  pubspec.yaml
.claude/: settings.local.json
lib/: app.dart  main.dart
lib/core/: service_locator.dart
lib/core/config/: routes.dart
lib/core/network/: api_client.dart  auth_interceptor.dart  error_handler.dart  network_events.dart
lib/core/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
lib/core/utils/: currency_formatter.dart  date_formatter.dart  either.dart  status_mapper.dart
lib/data/models/: auth_response_model.dart  auth_response_model.g.dart  beneficiary_model.dart  beneficiary_model.g.dart  distribution_model.dart  distribution_model.g.dart  donation_model.dart  donation_model.g.dart  stock_item_model.dart  stock_item_model.g.dart  user_model.dart  user_model.g.dart
lib/data/repositories/: auth_repository.dart
lib/data/services/: auth_service.dart  local_storage_service.dart
lib/presentation/layouts/: main_layout.dart
lib/presentation/providers/: auth_provider.dart  register_provider.dart  router_provider.dart
lib/presentation/screens/auth/: login_screen.dart  register_screen.dart
lib/presentation/screens/beneficiaries/: beneficiaries_screen.dart  beneficiary_form_screen.dart
lib/presentation/screens/dashboard/: dashboard_screen.dart
lib/presentation/screens/distribution/: distribution_history_screen.dart  distribution_screen.dart
lib/presentation/screens/donations/: donation_detail_screen.dart  (+1 more)
windows/: CMakeLists.txt
windows/flutter/ephemeral/: generated_config.cmake
(+12 files in other folders)
